@@ -21,7 +21,7 @@
 ## `geonetwork:3`
 
 ```console
-$ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976dbdc6d9ed724a800cf
+$ docker pull geonetwork@sha256:f619233b88ea73ac2008a2efde3a5507d599b607a1a04beaa4faff1f9935aaa4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -31,14 +31,14 @@ $ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976db
 ### `geonetwork:3` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:4377974eb97db59711f57fc720094a7bf6e507963cd13ced4597a971c1afe7b6
+$ docker pull geonetwork@sha256:390be78d56032021ccade8ad8fc63d1d3ee36af0f7c2cd71c65b66f6f988676d
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **519.0 MB (519008024 bytes)**  
+-	Total Size: **519.0 MB (519013203 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:f741d7116e6c3463931a349d80c4a7bdbe114ada00dafec9035172c7a5771c79`
+-	Image ID: `sha256:a8d409dc67935e4161b715e1fba1486550636051c5eaec3b310372df4dc24dee`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -101,19 +101,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -158,19 +158,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10`
 
 ```console
-$ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976dbdc6d9ed724a800cf
+$ docker pull geonetwork@sha256:f619233b88ea73ac2008a2efde3a5507d599b607a1a04beaa4faff1f9935aaa4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -180,14 +180,14 @@ $ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976db
 ### `geonetwork:3.10` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:4377974eb97db59711f57fc720094a7bf6e507963cd13ced4597a971c1afe7b6
+$ docker pull geonetwork@sha256:390be78d56032021ccade8ad8fc63d1d3ee36af0f7c2cd71c65b66f6f988676d
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **519.0 MB (519008024 bytes)**  
+-	Total Size: **519.0 MB (519013203 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:f741d7116e6c3463931a349d80c4a7bdbe114ada00dafec9035172c7a5771c79`
+-	Image ID: `sha256:a8d409dc67935e4161b715e1fba1486550636051c5eaec3b310372df4dc24dee`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -250,19 +250,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -307,37 +307,345 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.6`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:f619233b88ea73ac2008a2efde3a5507d599b607a1a04beaa4faff1f9935aaa4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.6` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:390be78d56032021ccade8ad8fc63d1d3ee36af0f7c2cd71c65b66f6f988676d
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **519.0 MB (519013203 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:a8d409dc67935e4161b715e1fba1486550636051c5eaec3b310372df4dc24dee`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 12 Jan 2021 00:32:36 GMT
+ADD file:53e587afdbeaee60cc14bd95907f14c8303c04b98c72f98e2c54d4343f15dd38 in / 
+# Tue, 12 Jan 2021 00:32:37 GMT
+CMD ["bash"]
+# Tue, 12 Jan 2021 03:57:25 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 03:57:32 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 12 Jan 2021 03:57:54 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 10:57:51 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 10:57:51 GMT
+ENV LANG=C.UTF-8
+# Tue, 12 Jan 2021 11:00:01 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 12 Jan 2021 11:00:01 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 12 Jan 2021 11:00:02 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Tue, 12 Jan 2021 11:00:02 GMT
+ENV JAVA_VERSION=8u275
+# Tue, 12 Jan 2021 11:00:11 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u275-b01/OpenJDK8U-jdk_x64_linux_8u275b01.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Wed, 13 Jan 2021 08:21:39 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Wed, 13 Jan 2021 08:21:39 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 13 Jan 2021 08:21:40 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Wed, 13 Jan 2021 08:21:40 GMT
+WORKDIR /usr/local/tomcat
+# Wed, 13 Jan 2021 08:21:40 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Wed, 13 Jan 2021 08:21:40 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_MAJOR=8
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_VERSION=8.5.61
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_SHA512=55d7d0442a3c1bae7e470ba75c7473a8deeaf33c60ff66cecdc136ae0b0e852b871940c5deb720d501b444ccb00f0b8520b1930cbf564c2f46ceaf1e0367d41b
+# Wed, 13 Jan 2021 08:32:38 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" --progress=dot:giga && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| xargs -rt readlink -e 		| sort -u 		| xargs -rt dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work; 		catalina.sh version
+# Wed, 13 Jan 2021 08:32:40 GMT
+RUN set -eux; 	nativeLines="$(catalina.sh configtest 2>&1)"; 	nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')"; 	nativeLines="$(echo "$nativeLines" | sort -u)"; 	if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Wed, 13 Jan 2021 08:32:40 GMT
+EXPOSE 8080
+# Wed, 13 Jan 2021 08:32:40 GMT
+CMD ["catalina.sh" "run"]
+# Wed, 13 Jan 2021 09:58:54 GMT
+ENV GN_FILE=geonetwork.war
+# Wed, 13 Jan 2021 09:58:55 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Wed, 13 Jan 2021 09:58:55 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Fri, 15 Jan 2021 22:20:11 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Fri, 15 Jan 2021 22:20:11 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Fri, 15 Jan 2021 22:20:11 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Fri, 15 Jan 2021 22:20:12 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:b9a857cbf04d2c0d2f0f6b73e894b20a977a6d3b6edd9e27d080e03142954950`  
+		Last Modified: Tue, 12 Jan 2021 00:38:49 GMT  
+		Size: 50.4 MB (50399171 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d557ee20540b597f518df05bc6888778cfc92bf46040c701d4a622389feb6807`  
+		Last Modified: Tue, 12 Jan 2021 04:05:56 GMT  
+		Size: 7.8 MB (7812018 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3b9ca4f00c2e4896c65625d678544b764d7483dca9dcab92b62093db72f21d3e`  
+		Last Modified: Tue, 12 Jan 2021 04:05:55 GMT  
+		Size: 10.0 MB (9996375 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:667fd949ed9338da3c1e09f9b75408c214368c637c448e0fd839467f6f7717b5`  
+		Last Modified: Tue, 12 Jan 2021 04:06:20 GMT  
+		Size: 51.8 MB (51830144 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:661d3b55f65797df3cf7dc0ce8338bdc5d6ae69eeeac2a3228f2baa9fa518047`  
+		Last Modified: Tue, 12 Jan 2021 11:14:08 GMT  
+		Size: 5.3 MB (5284970 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:60cfec2a948ecee9b375c3f89a95b0145a030d81cad57cc2024dc4379f9eff90`  
+		Last Modified: Tue, 12 Jan 2021 11:17:48 GMT  
+		Size: 211.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:79ee4b4b712182da3d20a2e228d1acd9280ba2ac65b8369bbd6f61403997fe97`  
+		Last Modified: Tue, 12 Jan 2021 11:18:10 GMT  
+		Size: 105.9 MB (105883524 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f4d903639a1376ee17cab865e8eda643fafc2e7274da7893946add823e04f715`  
+		Last Modified: Wed, 13 Jan 2021 08:40:25 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ba1813d1dbb8a81f7875505c8a96bafddc5cc850c93a7297c9b965f48ac36424`  
+		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
+		Size: 11.5 MB (11504038 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:57b2c7ea51b0057a64115d4edf910da7d55a6dfeab58848be7e7dac09d983a1f`  
+		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
+		Size: 249.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10.6-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:d39435bddb1d81916693daed373960811489433d8e415aa69001922e0ad50052
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:3.10.6-postgres` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:8ec81dcabc9b9d8b19cb53a838dc8b5cbe8d31b33d810c659298231be9ce7d3e
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **530.8 MB (530825162 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:ce64a32f1f30499ceec0c028850732326695816ebe4f6d5500723ba141b9d528`
+-	Entrypoint: `["\/entrypoint.sh"]`
+-	Default Command: `["catalina.sh","run"]`
+
+```dockerfile
+# Tue, 12 Jan 2021 00:32:36 GMT
+ADD file:53e587afdbeaee60cc14bd95907f14c8303c04b98c72f98e2c54d4343f15dd38 in / 
+# Tue, 12 Jan 2021 00:32:37 GMT
+CMD ["bash"]
+# Tue, 12 Jan 2021 03:57:25 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 03:57:32 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 12 Jan 2021 03:57:54 GMT
+RUN apt-get update && apt-get install -y --no-install-recommends 		git 		mercurial 		openssh-client 		subversion 				procps 	&& rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 10:57:51 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 10:57:51 GMT
+ENV LANG=C.UTF-8
+# Tue, 12 Jan 2021 11:00:01 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 12 Jan 2021 11:00:01 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 12 Jan 2021 11:00:02 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Tue, 12 Jan 2021 11:00:02 GMT
+ENV JAVA_VERSION=8u275
+# Tue, 12 Jan 2021 11:00:11 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u275-b01/OpenJDK8U-jdk_x64_linux_8u275b01.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		javac -version; 	java -version
+# Wed, 13 Jan 2021 08:21:39 GMT
+ENV CATALINA_HOME=/usr/local/tomcat
+# Wed, 13 Jan 2021 08:21:39 GMT
+ENV PATH=/usr/local/tomcat/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 13 Jan 2021 08:21:40 GMT
+RUN mkdir -p "$CATALINA_HOME"
+# Wed, 13 Jan 2021 08:21:40 GMT
+WORKDIR /usr/local/tomcat
+# Wed, 13 Jan 2021 08:21:40 GMT
+ENV TOMCAT_NATIVE_LIBDIR=/usr/local/tomcat/native-jni-lib
+# Wed, 13 Jan 2021 08:21:40 GMT
+ENV LD_LIBRARY_PATH=/usr/local/tomcat/native-jni-lib
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV GPG_KEYS=05AB33110949707C93A279E3D3EFE6B686867BA6 07E48665A34DCAFAE522E5E6266191C37C037D42 47309207D818FFD8DCD3F83F1931D684307A10A5 541FBE7D8F78B25E055DDEE13C370389288584E7 61B832AC2F1C5A90F0F9B00A1C506407564C17A3 713DA88BE50911535FE716F5208B0AB1D63011C7 79F7026C690BAA50B92CD8B66A3AD3F4F22C4FED 9BA44C2621385CB966EBA586F72C284D731FABEE A27677289986DB50844682F8ACB77FC2E86E29AC A9C5DF4D22E99998D9875A5110C01C5A2F6059E7 DCFD35E0BF8CA7344752DE8B6FB21E8933C60243 F3A04C595DB5B6A5F1ECA43E3B7BBB100D811BBE F7DA48BB64BCB84ECBA7EE6935CD23C10D498E23
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_MAJOR=8
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_VERSION=8.5.61
+# Wed, 13 Jan 2021 08:32:06 GMT
+ENV TOMCAT_SHA512=55d7d0442a3c1bae7e470ba75c7473a8deeaf33c60ff66cecdc136ae0b0e852b871940c5deb720d501b444ccb00f0b8520b1930cbf564c2f46ceaf1e0367d41b
+# Wed, 13 Jan 2021 08:32:38 GMT
+RUN set -eux; 		savedAptMark="$(apt-mark showmanual)"; 	apt-get update; 	apt-get install -y --no-install-recommends 		gnupg dirmngr 		wget ca-certificates 	; 		ddist() { 		local f="$1"; shift; 		local distFile="$1"; shift; 		local mvnFile="${1:-}"; 		local success=; 		local distUrl=; 		for distUrl in 			"https://www.apache.org/dyn/closer.cgi?action=download&filename=$distFile" 			"https://www-us.apache.org/dist/$distFile" 			"https://www.apache.org/dist/$distFile" 			"https://archive.apache.org/dist/$distFile" 			${mvnFile:+"https://repo1.maven.org/maven2/org/apache/tomcat/tomcat/$mvnFile"} 		; do 			if wget -O "$f" "$distUrl" --progress=dot:giga && [ -s "$f" ]; then 				success=1; 				break; 			fi; 		done; 		[ -n "$success" ]; 	}; 		ddist 'tomcat.tar.gz' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz"; 	echo "$TOMCAT_SHA512 *tomcat.tar.gz" | sha512sum --strict --check -; 	ddist 'tomcat.tar.gz.asc' "tomcat/tomcat-$TOMCAT_MAJOR/v$TOMCAT_VERSION/bin/apache-tomcat-$TOMCAT_VERSION.tar.gz.asc" "$TOMCAT_VERSION/tomcat-$TOMCAT_VERSION.tar.gz.asc"; 	export GNUPGHOME="$(mktemp -d)"; 	for key in $GPG_KEYS; do 		gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys "$key"; 	done; 	gpg --batch --verify tomcat.tar.gz.asc tomcat.tar.gz; 	tar -xf tomcat.tar.gz --strip-components=1; 	rm bin/*.bat; 	rm tomcat.tar.gz*; 	command -v gpgconf && gpgconf --kill all || :; 	rm -rf "$GNUPGHOME"; 		mv webapps webapps.dist; 	mkdir webapps; 		nativeBuildDir="$(mktemp -d)"; 	tar -xf bin/tomcat-native.tar.gz -C "$nativeBuildDir" --strip-components=1; 	apt-get install -y --no-install-recommends 		dpkg-dev 		gcc 		libapr1-dev 		libssl-dev 		make 	; 	( 		export CATALINA_HOME="$PWD"; 		cd "$nativeBuildDir/native"; 		gnuArch="$(dpkg-architecture --query DEB_BUILD_GNU_TYPE)"; 		aprConfig="$(command -v apr-1-config)"; 		./configure 			--build="$gnuArch" 			--libdir="$TOMCAT_NATIVE_LIBDIR" 			--prefix="$CATALINA_HOME" 			--with-apr="$aprConfig" 			--with-java-home="$JAVA_HOME" 			--with-ssl=yes; 		make -j "$(nproc)"; 		make install; 	); 	rm -rf "$nativeBuildDir"; 	rm bin/tomcat-native.tar.gz; 		apt-mark auto '.*' > /dev/null; 	[ -z "$savedAptMark" ] || apt-mark manual $savedAptMark > /dev/null; 	find "$TOMCAT_NATIVE_LIBDIR" -type f -executable -exec ldd '{}' ';' 		| awk '/=>/ { print $(NF-1) }' 		| xargs -rt readlink -e 		| sort -u 		| xargs -rt dpkg-query --search 		| cut -d: -f1 		| sort -u 		| xargs -r apt-mark manual 	; 	apt-get purge -y --auto-remove -o APT::AutoRemove::RecommendsImportant=false; 	rm -rf /var/lib/apt/lists/*; 		find ./bin/ -name '*.sh' -exec sed -ri 's|^#!/bin/sh$|#!/usr/bin/env bash|' '{}' +; 		chmod -R +rX .; 	chmod 777 logs temp work; 		catalina.sh version
+# Wed, 13 Jan 2021 08:32:40 GMT
+RUN set -eux; 	nativeLines="$(catalina.sh configtest 2>&1)"; 	nativeLines="$(echo "$nativeLines" | grep 'Apache Tomcat Native')"; 	nativeLines="$(echo "$nativeLines" | sort -u)"; 	if ! echo "$nativeLines" | grep -E 'INFO: Loaded( APR based)? Apache Tomcat Native library' >&2; then 		echo >&2 "$nativeLines"; 		exit 1; 	fi
+# Wed, 13 Jan 2021 08:32:40 GMT
+EXPOSE 8080
+# Wed, 13 Jan 2021 08:32:40 GMT
+CMD ["catalina.sh" "run"]
+# Wed, 13 Jan 2021 09:58:54 GMT
+ENV GN_FILE=geonetwork.war
+# Wed, 13 Jan 2021 09:58:55 GMT
+ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
+# Wed, 13 Jan 2021 09:58:55 GMT
+ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
+WORKDIR /usr/local/tomcat/webapps
+# Fri, 15 Jan 2021 22:20:11 GMT
+RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
+# Fri, 15 Jan 2021 22:20:11 GMT
+COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
+# Fri, 15 Jan 2021 22:20:11 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Fri, 15 Jan 2021 22:20:12 GMT
+CMD ["catalina.sh" "run"]
+# Fri, 15 Jan 2021 22:20:26 GMT
+RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
+# Fri, 15 Jan 2021 22:20:27 GMT
+RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
+# Fri, 15 Jan 2021 22:20:27 GMT
+COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
+# Fri, 15 Jan 2021 22:20:27 GMT
+COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
+# Fri, 15 Jan 2021 22:20:28 GMT
+ENTRYPOINT ["/entrypoint.sh"]
+# Fri, 15 Jan 2021 22:20:28 GMT
+CMD ["catalina.sh" "run"]
+```
+
+-	Layers:
+	-	`sha256:b9a857cbf04d2c0d2f0f6b73e894b20a977a6d3b6edd9e27d080e03142954950`  
+		Last Modified: Tue, 12 Jan 2021 00:38:49 GMT  
+		Size: 50.4 MB (50399171 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d557ee20540b597f518df05bc6888778cfc92bf46040c701d4a622389feb6807`  
+		Last Modified: Tue, 12 Jan 2021 04:05:56 GMT  
+		Size: 7.8 MB (7812018 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3b9ca4f00c2e4896c65625d678544b764d7483dca9dcab92b62093db72f21d3e`  
+		Last Modified: Tue, 12 Jan 2021 04:05:55 GMT  
+		Size: 10.0 MB (9996375 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:667fd949ed9338da3c1e09f9b75408c214368c637c448e0fd839467f6f7717b5`  
+		Last Modified: Tue, 12 Jan 2021 04:06:20 GMT  
+		Size: 51.8 MB (51830144 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:661d3b55f65797df3cf7dc0ce8338bdc5d6ae69eeeac2a3228f2baa9fa518047`  
+		Last Modified: Tue, 12 Jan 2021 11:14:08 GMT  
+		Size: 5.3 MB (5284970 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:60cfec2a948ecee9b375c3f89a95b0145a030d81cad57cc2024dc4379f9eff90`  
+		Last Modified: Tue, 12 Jan 2021 11:17:48 GMT  
+		Size: 211.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:79ee4b4b712182da3d20a2e228d1acd9280ba2ac65b8369bbd6f61403997fe97`  
+		Last Modified: Tue, 12 Jan 2021 11:18:10 GMT  
+		Size: 105.9 MB (105883524 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:f4d903639a1376ee17cab865e8eda643fafc2e7274da7893946add823e04f715`  
+		Last Modified: Wed, 13 Jan 2021 08:40:25 GMT  
+		Size: 139.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:ba1813d1dbb8a81f7875505c8a96bafddc5cc850c93a7297c9b965f48ac36424`  
+		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
+		Size: 11.5 MB (11504038 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:57b2c7ea51b0057a64115d4edf910da7d55a6dfeab58848be7e7dac09d983a1f`  
+		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
+		Size: 130.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
+		Size: 249.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:e02f1fb40261824d9d2ee0603c0001dc9c1c779234b1f9eff6c3ce3b530bfcb5`  
+		Last Modified: Fri, 15 Jan 2021 22:22:00 GMT  
+		Size: 11.8 MB (11808595 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:c82a273037c9aeb044347bca15be1e8ce9898b0378ac40d909f4984bdfa13094`  
+		Last Modified: Fri, 15 Jan 2021 22:21:57 GMT  
+		Size: 1.3 KB (1267 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:1af67a579afcafb60949efa3895cd124e4f44217d990e6a6eff9e8bfa8027e94`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 1.1 KB (1126 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5a6f1465ed957a65df5a4a100b22994a79e69fc2f45d102b8598bdfc54a456c4`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 971.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.10-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1be3df8a3b2172ed9
+$ docker pull geonetwork@sha256:d39435bddb1d81916693daed373960811489433d8e415aa69001922e0ad50052
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -347,14 +655,14 @@ $ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1
 ### `geonetwork:3.10-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:606720017d95980826625b9e1131bbb143a0a5720c93d5b7bb9359717850c2f6
+$ docker pull geonetwork@sha256:8ec81dcabc9b9d8b19cb53a838dc8b5cbe8d31b33d810c659298231be9ce7d3e
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.8 MB (530819863 bytes)**  
+-	Total Size: **530.8 MB (530825162 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:90666574c8c5c4c26caf777003d0371a1c3bc20128eb62ddd4e22f89b4de6af2`
+-	Image ID: `sha256:ce64a32f1f30499ceec0c028850732326695816ebe4f6d5500723ba141b9d528`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -417,31 +725,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
-# Wed, 13 Jan 2021 09:59:25 GMT
+# Fri, 15 Jan 2021 22:20:26 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -486,29 +794,29 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7aa4b51f0171a45880f78eb8d174408408c8e551840bb12df2f3580d72b9a618`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 11.8 MB (11808483 bytes)  
+	-	`sha256:e02f1fb40261824d9d2ee0603c0001dc9c1c779234b1f9eff6c3ce3b530bfcb5`  
+		Last Modified: Fri, 15 Jan 2021 22:22:00 GMT  
+		Size: 11.8 MB (11808595 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:8f16e3dd151f5aff75150d0da50299707c7d0b1f13c7c15d0227168f36f155d7`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.3 KB (1263 bytes)  
+	-	`sha256:c82a273037c9aeb044347bca15be1e8ce9898b0378ac40d909f4984bdfa13094`  
+		Last Modified: Fri, 15 Jan 2021 22:21:57 GMT  
+		Size: 1.3 KB (1267 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a3575470b78ffc29f19765b62b5322f8700a59256a34b2e720013d787dc0073e`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.1 KB (1120 bytes)  
+	-	`sha256:1af67a579afcafb60949efa3895cd124e4f44217d990e6a6eff9e8bfa8027e94`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 1.1 KB (1126 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bd25a2df10ca2c12ae1d5635bf61316e68f886c788d94896eddd4baba9779c8f`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 973.0 B  
+	-	`sha256:5a6f1465ed957a65df5a4a100b22994a79e69fc2f45d102b8598bdfc54a456c4`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 971.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:3.8`
@@ -1166,7 +1474,7 @@ CMD ["catalina.sh" "run"]
 ## `geonetwork:3-postgres`
 
 ```console
-$ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1be3df8a3b2172ed9
+$ docker pull geonetwork@sha256:d39435bddb1d81916693daed373960811489433d8e415aa69001922e0ad50052
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1176,14 +1484,14 @@ $ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1
 ### `geonetwork:3-postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:606720017d95980826625b9e1131bbb143a0a5720c93d5b7bb9359717850c2f6
+$ docker pull geonetwork@sha256:8ec81dcabc9b9d8b19cb53a838dc8b5cbe8d31b33d810c659298231be9ce7d3e
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.8 MB (530819863 bytes)**  
+-	Total Size: **530.8 MB (530825162 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:90666574c8c5c4c26caf777003d0371a1c3bc20128eb62ddd4e22f89b4de6af2`
+-	Image ID: `sha256:ce64a32f1f30499ceec0c028850732326695816ebe4f6d5500723ba141b9d528`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1246,31 +1554,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
-# Wed, 13 Jan 2021 09:59:25 GMT
+# Fri, 15 Jan 2021 22:20:26 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1315,35 +1623,35 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7aa4b51f0171a45880f78eb8d174408408c8e551840bb12df2f3580d72b9a618`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 11.8 MB (11808483 bytes)  
+	-	`sha256:e02f1fb40261824d9d2ee0603c0001dc9c1c779234b1f9eff6c3ce3b530bfcb5`  
+		Last Modified: Fri, 15 Jan 2021 22:22:00 GMT  
+		Size: 11.8 MB (11808595 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:8f16e3dd151f5aff75150d0da50299707c7d0b1f13c7c15d0227168f36f155d7`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.3 KB (1263 bytes)  
+	-	`sha256:c82a273037c9aeb044347bca15be1e8ce9898b0378ac40d909f4984bdfa13094`  
+		Last Modified: Fri, 15 Jan 2021 22:21:57 GMT  
+		Size: 1.3 KB (1267 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a3575470b78ffc29f19765b62b5322f8700a59256a34b2e720013d787dc0073e`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.1 KB (1120 bytes)  
+	-	`sha256:1af67a579afcafb60949efa3895cd124e4f44217d990e6a6eff9e8bfa8027e94`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 1.1 KB (1126 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bd25a2df10ca2c12ae1d5635bf61316e68f886c788d94896eddd4baba9779c8f`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 973.0 B  
+	-	`sha256:5a6f1465ed957a65df5a4a100b22994a79e69fc2f45d102b8598bdfc54a456c4`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 971.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4`
 
 ```console
-$ docker pull geonetwork@sha256:4d4d7b12c5282bd2054bed73c4f50ec62fe81b175b7fda0e81a91457240f977f
+$ docker pull geonetwork@sha256:406538a54b039d75020467008f0963dc7762eabcf9200d9c3168ee441acbf673
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1353,14 +1661,14 @@ $ docker pull geonetwork@sha256:4d4d7b12c5282bd2054bed73c4f50ec62fe81b175b7fda0e
 ### `geonetwork:4` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:b809007446143e8621dface93f1450bce90a803bfc3d0a1246b8edd7a56b922f
+$ docker pull geonetwork@sha256:be2ec6f48cf09264cf88e329dc4f5328832aa705e458a5afaeb82abafe0e6343
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **416.2 MB (416198345 bytes)**  
+-	Total Size: **426.1 MB (426053642 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:3ad5c944267ad789c0ab50daa4771a6d23d059c8617fb14d3690488e30af9433`
+-	Image ID: `sha256:057c466d249b77b6f2bb490dc8f63c769f9e0d62e6d789211a5ccfd011de98bc`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -1425,21 +1733,21 @@ USER root
 RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
 # Wed, 13 Jan 2021 10:00:08 GMT
 USER jetty
-# Wed, 13 Jan 2021 10:00:08 GMT
-ENV GN_FILE=GeoNetwork-4.0.1-0.war
-# Wed, 13 Jan 2021 10:00:08 GMT
-ENV GN_VERSION=4.0.1
-# Wed, 13 Jan 2021 10:00:09 GMT
-ENV GN_DOWNLOAD_MD5=e9c885de19644856d855c0ea78052b12
-# Wed, 13 Jan 2021 10:01:15 GMT
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_FILE=GeoNetwork-4.0.2-0.war
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_VERSION=4.0.2
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_DOWNLOAD_MD5=3009549f23b6aca6ebdd851c5bf512b8
+# Fri, 15 Jan 2021 22:20:55 GMT
 RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:55 GMT
 COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -1480,19 +1788,19 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 13 Jan 2021 10:03:27 GMT  
 		Size: 464.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:ae23800b43fa914502c3dde188d5e2ccf38170d0107623203876cd1429e14a35`  
-		Last Modified: Wed, 13 Jan 2021 10:03:46 GMT  
-		Size: 291.4 MB (291358244 bytes)  
+	-	`sha256:833d2ad8c08acc1f3019fb1b33180714728bbbc6aa1fc5111e5fdc46f58bdb05`  
+		Last Modified: Fri, 15 Jan 2021 22:22:34 GMT  
+		Size: 301.2 MB (301213542 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:b7af66de658a6dc92b2640e90543499793387c3eeb9753e51b45515f17932a69`  
-		Last Modified: Wed, 13 Jan 2021 10:03:26 GMT  
-		Size: 959.0 B  
+	-	`sha256:4d451193e5b8e945a74c671f13ca5fa1cf9d51f70e9a59945381e9fd7b2fa719`  
+		Last Modified: Fri, 15 Jan 2021 22:22:13 GMT  
+		Size: 958.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.0`
 
 ```console
-$ docker pull geonetwork@sha256:4d4d7b12c5282bd2054bed73c4f50ec62fe81b175b7fda0e81a91457240f977f
+$ docker pull geonetwork@sha256:406538a54b039d75020467008f0963dc7762eabcf9200d9c3168ee441acbf673
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1502,14 +1810,14 @@ $ docker pull geonetwork@sha256:4d4d7b12c5282bd2054bed73c4f50ec62fe81b175b7fda0e
 ### `geonetwork:4.0` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:b809007446143e8621dface93f1450bce90a803bfc3d0a1246b8edd7a56b922f
+$ docker pull geonetwork@sha256:be2ec6f48cf09264cf88e329dc4f5328832aa705e458a5afaeb82abafe0e6343
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **416.2 MB (416198345 bytes)**  
+-	Total Size: **426.1 MB (426053642 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:3ad5c944267ad789c0ab50daa4771a6d23d059c8617fb14d3690488e30af9433`
+-	Image ID: `sha256:057c466d249b77b6f2bb490dc8f63c769f9e0d62e6d789211a5ccfd011de98bc`
 -	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
 -	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
 
@@ -1574,21 +1882,21 @@ USER root
 RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
 # Wed, 13 Jan 2021 10:00:08 GMT
 USER jetty
-# Wed, 13 Jan 2021 10:00:08 GMT
-ENV GN_FILE=GeoNetwork-4.0.1-0.war
-# Wed, 13 Jan 2021 10:00:08 GMT
-ENV GN_VERSION=4.0.1
-# Wed, 13 Jan 2021 10:00:09 GMT
-ENV GN_DOWNLOAD_MD5=e9c885de19644856d855c0ea78052b12
-# Wed, 13 Jan 2021 10:01:15 GMT
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_FILE=GeoNetwork-4.0.2-0.war
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_VERSION=4.0.2
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_DOWNLOAD_MD5=3009549f23b6aca6ebdd851c5bf512b8
+# Fri, 15 Jan 2021 22:20:55 GMT
 RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:55 GMT
 COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 ENTRYPOINT ["/geonetwork-entrypoint.sh"]
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
-# Wed, 13 Jan 2021 10:01:16 GMT
+# Fri, 15 Jan 2021 22:20:56 GMT
 VOLUME [/catalogue-data]
 ```
 
@@ -1629,28 +1937,168 @@ VOLUME [/catalogue-data]
 		Last Modified: Wed, 13 Jan 2021 10:03:27 GMT  
 		Size: 464.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:ae23800b43fa914502c3dde188d5e2ccf38170d0107623203876cd1429e14a35`  
-		Last Modified: Wed, 13 Jan 2021 10:03:46 GMT  
-		Size: 291.4 MB (291358244 bytes)  
+	-	`sha256:833d2ad8c08acc1f3019fb1b33180714728bbbc6aa1fc5111e5fdc46f58bdb05`  
+		Last Modified: Fri, 15 Jan 2021 22:22:34 GMT  
+		Size: 301.2 MB (301213542 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:b7af66de658a6dc92b2640e90543499793387c3eeb9753e51b45515f17932a69`  
-		Last Modified: Wed, 13 Jan 2021 10:03:26 GMT  
-		Size: 959.0 B  
+	-	`sha256:4d451193e5b8e945a74c671f13ca5fa1cf9d51f70e9a59945381e9fd7b2fa719`  
+		Last Modified: Fri, 15 Jan 2021 22:22:13 GMT  
+		Size: 958.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:4.0.2`
 
 ```console
-$ docker pull geonetwork@sha256:a8409dff6597f2ef5f7ecd3c672671bb2af9a390073efd74f95c54aa41cba22a
+$ docker pull geonetwork@sha256:406538a54b039d75020467008f0963dc7762eabcf9200d9c3168ee441acbf673
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
 -	Platforms:
+	-	linux; amd64
+
+### `geonetwork:4.0.2` - linux; amd64
+
+```console
+$ docker pull geonetwork@sha256:be2ec6f48cf09264cf88e329dc4f5328832aa705e458a5afaeb82abafe0e6343
+```
+
+-	Docker Version: 19.03.12
+-	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
+-	Total Size: **426.1 MB (426053642 bytes)**  
+	(compressed transfer size, not on-disk size)
+-	Image ID: `sha256:057c466d249b77b6f2bb490dc8f63c769f9e0d62e6d789211a5ccfd011de98bc`
+-	Entrypoint: `["\/geonetwork-entrypoint.sh"]`
+-	Default Command: `["java","-jar","\/usr\/local\/jetty\/start.jar"]`
+
+```dockerfile
+# Tue, 12 Jan 2021 00:32:36 GMT
+ADD file:53e587afdbeaee60cc14bd95907f14c8303c04b98c72f98e2c54d4343f15dd38 in / 
+# Tue, 12 Jan 2021 00:32:37 GMT
+CMD ["bash"]
+# Tue, 12 Jan 2021 03:57:25 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		ca-certificates 		curl 		netbase 		wget 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 03:57:32 GMT
+RUN set -ex; 	if ! command -v gpg > /dev/null; then 		apt-get update; 		apt-get install -y --no-install-recommends 			gnupg 			dirmngr 		; 		rm -rf /var/lib/apt/lists/*; 	fi
+# Tue, 12 Jan 2021 10:58:59 GMT
+RUN set -eux; 	apt-get update; 	apt-get install -y --no-install-recommends 		bzip2 		unzip 		xz-utils 				ca-certificates p11-kit 				fontconfig libfreetype6 	; 	rm -rf /var/lib/apt/lists/*
+# Tue, 12 Jan 2021 10:58:59 GMT
+ENV LANG=C.UTF-8
+# Tue, 12 Jan 2021 11:00:50 GMT
+ENV JAVA_HOME=/usr/local/openjdk-8
+# Tue, 12 Jan 2021 11:00:50 GMT
+ENV PATH=/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Tue, 12 Jan 2021 11:00:51 GMT
+RUN { echo '#/bin/sh'; echo 'echo "$JAVA_HOME"'; } > /usr/local/bin/docker-java-home && chmod +x /usr/local/bin/docker-java-home && [ "$JAVA_HOME" = "$(docker-java-home)" ]
+# Tue, 12 Jan 2021 11:00:52 GMT
+ENV JAVA_VERSION=8u275
+# Tue, 12 Jan 2021 11:00:59 GMT
+RUN set -eux; 		arch="$(dpkg --print-architecture)"; 	case "$arch" in 		amd64 | i386:x86-64) downloadUrl=https://github.com/AdoptOpenJDK/openjdk8-upstream-binaries/releases/download/jdk8u275-b01/OpenJDK8U-jre_x64_linux_8u275b01.tar.gz ;; 		*) echo >&2 "error: unsupported architecture: '$arch'"; exit 1 ;; 	esac; 		wget -O openjdk.tgz.asc "$downloadUrl.sign"; 	wget -O openjdk.tgz "$downloadUrl" --progress=dot:giga; 		export GNUPGHOME="$(mktemp -d)"; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --keyserver-options no-self-sigs-only --recv-keys CA5F11C6CE22644D42C6AC4492EF8D39DC13168F; 	gpg --batch --keyserver ha.pool.sks-keyservers.net --recv-keys EAC843EBD3EFDB98CC772FADA5CD6035332FA671; 	gpg --batch --list-sigs --keyid-format 0xLONG CA5F11C6CE22644D42C6AC4492EF8D39DC13168F 		| tee /dev/stderr 		| grep '0xA5CD6035332FA671' 		| grep 'Andrew Haley'; 	gpg --batch --verify openjdk.tgz.asc openjdk.tgz; 	gpgconf --kill all; 	rm -rf "$GNUPGHOME"; 		mkdir -p "$JAVA_HOME"; 	tar --extract 		--file openjdk.tgz 		--directory "$JAVA_HOME" 		--strip-components 1 		--no-same-owner 	; 	rm openjdk.tgz*; 			{ 		echo '#!/usr/bin/env bash'; 		echo 'set -Eeuo pipefail'; 		echo 'if ! [ -d "$JAVA_HOME" ]; then echo >&2 "error: missing JAVA_HOME environment variable"; exit 1; fi'; 		echo 'cacertsFile=; for f in "$JAVA_HOME/lib/security/cacerts" "$JAVA_HOME/jre/lib/security/cacerts"; do if [ -e "$f" ]; then cacertsFile="$f"; break; fi; done'; 		echo 'if [ -z "$cacertsFile" ] || ! [ -f "$cacertsFile" ]; then echo >&2 "error: failed to find cacerts file in $JAVA_HOME"; exit 1; fi'; 		echo 'trust extract --overwrite --format=java-cacerts --filter=ca-anchors --purpose=server-auth "$cacertsFile"'; 	} > /etc/ca-certificates/update.d/docker-openjdk; 	chmod +x /etc/ca-certificates/update.d/docker-openjdk; 	/etc/ca-certificates/update.d/docker-openjdk; 		find "$JAVA_HOME/lib" -name '*.so' -exec dirname '{}' ';' | sort -u > /etc/ld.so.conf.d/docker-openjdk.conf; 	ldconfig; 		java -version
+# Wed, 13 Jan 2021 06:57:05 GMT
+ENV JETTY_VERSION=9.4.35.v20201120
+# Wed, 13 Jan 2021 06:57:05 GMT
+ENV JETTY_HOME=/usr/local/jetty
+# Wed, 13 Jan 2021 06:57:05 GMT
+ENV JETTY_BASE=/var/lib/jetty
+# Wed, 13 Jan 2021 06:57:05 GMT
+ENV TMPDIR=/tmp/jetty
+# Wed, 13 Jan 2021 06:57:05 GMT
+ENV PATH=/usr/local/jetty/bin:/usr/local/openjdk-8/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+# Wed, 13 Jan 2021 06:57:06 GMT
+ENV JETTY_TGZ_URL=https://repo1.maven.org/maven2/org/eclipse/jetty/jetty-home/9.4.35.v20201120/jetty-home-9.4.35.v20201120.tar.gz
+# Wed, 13 Jan 2021 06:57:06 GMT
+ENV JETTY_GPG_KEYS=AED5EE6C45D0FE8D5D1B164F27DED4BF6216DB8F 	2A684B57436A81FA8706B53C61C3351A438A3B7D 	5989BAF76217B843D66BE55B2D0E1FB8FE4B68B4 	B59B67FD7904984367F931800818D9D68FB67BAC 	BFBB21C246D7776836287A48A04E0C74ABB35FEA 	8B096546B1A8F02656B15D3B1677D141BCF3584D 	FBA2B18D238AB852DF95745C76157BDF03D0DCD6 	5C9579B3DB2E506429319AAEF33B071B29559E1E 	F254B35617DC255D9344BCFA873A8E86B4372146
+# Wed, 13 Jan 2021 06:57:09 GMT
+RUN set -xe ; 	export GNUPGHOME=/jetty-keys ; 	mkdir -p "$GNUPGHOME" ; 	for key in $JETTY_GPG_KEYS; do 		for server in 			ha.pool.sks-keyservers.net 			p80.pool.sks-keyservers.net:80 			ipv4.pool.sks-keyservers.net 			pgp.mit.edu ; 		do 			if gpg --batch --keyserver "$server" --recv-keys "$key"; then 				break; 			fi; 		done; 	done ; 	mkdir -p "$JETTY_HOME" ; 	cd $JETTY_HOME ; 	curl -SL "$JETTY_TGZ_URL" -o jetty.tar.gz ; 	curl -SL "$JETTY_TGZ_URL.asc" -o jetty.tar.gz.asc ; 	gpg --batch --verify jetty.tar.gz.asc jetty.tar.gz ; 	tar -xvf jetty.tar.gz --strip-components=1 ; 	sed -i '/jetty-logging/d' etc/jetty.conf ; 	mkdir -p "$JETTY_BASE" ; 	cd $JETTY_BASE ; 	java -jar "$JETTY_HOME/start.jar" --create-startd 		--add-to-start="server,http,deploy,jsp,jstl,ext,resources,websocket" ; 	mkdir -p "$TMPDIR" ; 	groupadd -r jetty && useradd -r -g jetty jetty ; 	chown -R jetty:jetty "$JETTY_HOME" "$JETTY_BASE" "$TMPDIR" ; 	usermod -d $JETTY_BASE jetty ; 	rm -rf /tmp/hsperfdata_root ; 	rm -fr $JETTY_HOME/jetty.tar.gz* ; 	rm -fr /jetty-keys $GNUPGHOME ; 	rm -rf /tmp/hsperfdata_root ; 	java -jar "$JETTY_HOME/start.jar" --list-config ;
+# Wed, 13 Jan 2021 06:57:10 GMT
+WORKDIR /var/lib/jetty
+# Wed, 13 Jan 2021 06:57:10 GMT
+COPY multi:aa77a0f6aef2add1a97bf742e5d8ca9322cda3f66ea7673ea49c33da7e5b0889 in / 
+# Wed, 13 Jan 2021 06:57:10 GMT
+USER jetty
+# Wed, 13 Jan 2021 06:57:10 GMT
+EXPOSE 8080
+# Wed, 13 Jan 2021 06:57:11 GMT
+ENTRYPOINT ["/docker-entrypoint.sh"]
+# Wed, 13 Jan 2021 06:57:11 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Wed, 13 Jan 2021 10:00:03 GMT
+ENV DATA_DIR=/catalogue-data
+# Wed, 13 Jan 2021 10:00:04 GMT
+ENV JAVA_OPTS=-Dorg.eclipse.jetty.annotations.AnnotationParser.LEVEL=OFF         -Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true         -Xms512M -Xss512M -Xmx2G -XX:+UseConcMarkSweepGC         -Dgeonetwork.resources.dir=/catalogue-data/resources         -Dgeonetwork.data.dir=/catalogue-data         -Dgeonetwork.codeList.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/codelist         -Dgeonetwork.schema.dir=/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins
+# Wed, 13 Jan 2021 10:00:04 GMT
+USER root
+# Wed, 13 Jan 2021 10:00:08 GMT
+RUN apt-get -y update &&     apt-get -y install curl &&     rm -rf /var/lib/apt/lists/* &&     mkdir -p /${DATA_DIR} &&     chown -R jetty:jetty ${DATA_DIR} &&     mkdir -p /var/lib/jetty/webapps/geonetwork &&     chown -R jetty:jetty /var/lib/jetty/webapps/geonetwork
+# Wed, 13 Jan 2021 10:00:08 GMT
+USER jetty
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_FILE=GeoNetwork-4.0.2-0.war
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_VERSION=4.0.2
+# Fri, 15 Jan 2021 22:20:41 GMT
+ENV GN_DOWNLOAD_MD5=3009549f23b6aca6ebdd851c5bf512b8
+# Fri, 15 Jan 2021 22:20:55 GMT
+RUN cd /var/lib/jetty/webapps/geonetwork/ &&     curl -fSL -o geonetwork.war      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "${GN_DOWNLOAD_MD5} *geonetwork.war" | md5sum -c &&      unzip -q geonetwork.war &&      rm geonetwork.war
+# Fri, 15 Jan 2021 22:20:55 GMT
+COPY file:ca46ab251df3dfc253cb04cf962e7266e42428fab31ad2f583a7c86b06d5f778 in /geonetwork-entrypoint.sh 
+# Fri, 15 Jan 2021 22:20:56 GMT
+ENTRYPOINT ["/geonetwork-entrypoint.sh"]
+# Fri, 15 Jan 2021 22:20:56 GMT
+CMD ["java" "-jar" "/usr/local/jetty/start.jar"]
+# Fri, 15 Jan 2021 22:20:56 GMT
+VOLUME [/catalogue-data]
+```
+
+-	Layers:
+	-	`sha256:b9a857cbf04d2c0d2f0f6b73e894b20a977a6d3b6edd9e27d080e03142954950`  
+		Last Modified: Tue, 12 Jan 2021 00:38:49 GMT  
+		Size: 50.4 MB (50399171 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:d557ee20540b597f518df05bc6888778cfc92bf46040c701d4a622389feb6807`  
+		Last Modified: Tue, 12 Jan 2021 04:05:56 GMT  
+		Size: 7.8 MB (7812018 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:3b9ca4f00c2e4896c65625d678544b764d7483dca9dcab92b62093db72f21d3e`  
+		Last Modified: Tue, 12 Jan 2021 04:05:55 GMT  
+		Size: 10.0 MB (9996375 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6cee913589ffa01b7db130983b384bf0fe61540e151ca3373557e4957fc3ff88`  
+		Last Modified: Tue, 12 Jan 2021 11:15:45 GMT  
+		Size: 5.5 MB (5530074 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:4ce6106adef36c57fab4f69e57dd4e27ec5c7b9882c4ccdc3eec00bf0be901ef`  
+		Last Modified: Tue, 12 Jan 2021 11:19:07 GMT  
+		Size: 211.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:5065f34649a312ab4c99b2a0595030d6433efb4645448e5f9426c9b6a8bc8584`  
+		Last Modified: Tue, 12 Jan 2021 11:19:17 GMT  
+		Size: 41.3 MB (41301476 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:0c33fbe977a857891bc0fb0d996b50b399160ad170f2175f5acfb2e5ab8cdcde`  
+		Last Modified: Wed, 13 Jan 2021 07:01:57 GMT  
+		Size: 9.8 MB (9797905 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:b2e593f0e75f97a25582a300a7f628c59820ddc35d1f17d6a86cc6ed40e85db1`  
+		Last Modified: Wed, 13 Jan 2021 07:01:55 GMT  
+		Size: 1.4 KB (1448 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:6201e7f2a888a1a8bee25ec8e1cd5f1775bf4697a376c3df5684106355379202`  
+		Last Modified: Wed, 13 Jan 2021 10:03:27 GMT  
+		Size: 464.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:833d2ad8c08acc1f3019fb1b33180714728bbbc6aa1fc5111e5fdc46f58bdb05`  
+		Last Modified: Fri, 15 Jan 2021 22:22:34 GMT  
+		Size: 301.2 MB (301213542 bytes)  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
+	-	`sha256:4d451193e5b8e945a74c671f13ca5fa1cf9d51f70e9a59945381e9fd7b2fa719`  
+		Last Modified: Fri, 15 Jan 2021 22:22:13 GMT  
+		Size: 958.0 B  
+		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:latest`
 
 ```console
-$ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976dbdc6d9ed724a800cf
+$ docker pull geonetwork@sha256:f619233b88ea73ac2008a2efde3a5507d599b607a1a04beaa4faff1f9935aaa4
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1660,14 +2108,14 @@ $ docker pull geonetwork@sha256:a22cbfa56cdfb0fa4cb1d622494e51cd6a8f87380f4976db
 ### `geonetwork:latest` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:4377974eb97db59711f57fc720094a7bf6e507963cd13ced4597a971c1afe7b6
+$ docker pull geonetwork@sha256:390be78d56032021ccade8ad8fc63d1d3ee36af0f7c2cd71c65b66f6f988676d
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **519.0 MB (519008024 bytes)**  
+-	Total Size: **519.0 MB (519013203 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:f741d7116e6c3463931a349d80c4a7bdbe114ada00dafec9035172c7a5771c79`
+-	Image ID: `sha256:a8d409dc67935e4161b715e1fba1486550636051c5eaec3b310372df4dc24dee`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1730,19 +2178,19 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1787,19 +2235,19 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
 
 ## `geonetwork:postgres`
 
 ```console
-$ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1be3df8a3b2172ed9
+$ docker pull geonetwork@sha256:d39435bddb1d81916693daed373960811489433d8e415aa69001922e0ad50052
 ```
 
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.list.v2+json`
@@ -1809,14 +2257,14 @@ $ docker pull geonetwork@sha256:669f124db3ab1a78c4228dc62596ee35018a1d81c207e9f1
 ### `geonetwork:postgres` - linux; amd64
 
 ```console
-$ docker pull geonetwork@sha256:606720017d95980826625b9e1131bbb143a0a5720c93d5b7bb9359717850c2f6
+$ docker pull geonetwork@sha256:8ec81dcabc9b9d8b19cb53a838dc8b5cbe8d31b33d810c659298231be9ce7d3e
 ```
 
 -	Docker Version: 19.03.12
 -	Manifest MIME: `application/vnd.docker.distribution.manifest.v2+json`
--	Total Size: **530.8 MB (530819863 bytes)**  
+-	Total Size: **530.8 MB (530825162 bytes)**  
 	(compressed transfer size, not on-disk size)
--	Image ID: `sha256:90666574c8c5c4c26caf777003d0371a1c3bc20128eb62ddd4e22f89b4de6af2`
+-	Image ID: `sha256:ce64a32f1f30499ceec0c028850732326695816ebe4f6d5500723ba141b9d528`
 -	Entrypoint: `["\/entrypoint.sh"]`
 -	Default Command: `["catalina.sh","run"]`
 
@@ -1879,31 +2327,31 @@ ENV GN_FILE=geonetwork.war
 ENV DATA_DIR=/usr/local/tomcat/webapps/geonetwork/WEB-INF/data
 # Wed, 13 Jan 2021 09:58:55 GMT
 ENV JAVA_OPTS=-Djava.security.egd=file:/dev/./urandom -Djava.awt.headless=true -server -Xms512m -Xmx2024m -XX:NewSize=512m -XX:MaxNewSize=1024m -XX:+UseConcMarkSweepGC
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_VERSION=3.10.5
-# Wed, 13 Jan 2021 09:58:55 GMT
-ENV GN_DOWNLOAD_MD5=63ffc3929e486e48c56b89b62da72813
-# Wed, 13 Jan 2021 09:58:55 GMT
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_VERSION=3.10.6
+# Fri, 15 Jan 2021 22:19:56 GMT
+ENV GN_DOWNLOAD_MD5=6f6980788a4df8477b20aa114bae2ef9
+# Fri, 15 Jan 2021 22:19:56 GMT
 WORKDIR /usr/local/tomcat/webapps
-# Wed, 13 Jan 2021 09:59:09 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 RUN curl -fSL -o $GN_FILE      https://sourceforge.net/projects/geonetwork/files/GeoNetwork_opensource/v${GN_VERSION}/${GN_FILE}/download &&      echo "$GN_DOWNLOAD_MD5 *${GN_FILE}" | md5sum -c &&      mkdir -p geonetwork &&      unzip -e $GN_FILE -d geonetwork &&      rm $GN_FILE
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 COPY file:0804862fd42c05f06dfa65cb1e5dad9a956d8ac6a3ddd4d962847ba159f5cfe6 in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:11 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:10 GMT
+# Fri, 15 Jan 2021 22:20:12 GMT
 CMD ["catalina.sh" "run"]
-# Wed, 13 Jan 2021 09:59:25 GMT
+# Fri, 15 Jan 2021 22:20:26 GMT
 RUN apt-get update && apt-get install -y postgresql-client &&     rm -rf /var/lib/apt/lists/*
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 RUN sed -i -e 's#<import resource="../config-db/${geonetwork.db.type:h2}.xml"/>#<!--<import resource="../config-db/${geonetwork.db.type:h2}.xml"/-->#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml && sed -i -e 's#<!--<import resource="../config-db/postgres.xml"/>-->#<import resource="../config-db/postgres.xml"/>#g' $CATALINA_HOME/webapps/geonetwork/WEB-INF/config-node/srv.xml
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:83f69d2041e5fb378033b0db57e096c81ba0725102ab4da4f089685e748fcce3 in /usr/local/tomcat/webapps/geonetwork/WEB-INF/config-db/jdbc.properties 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:27 GMT
 COPY file:c88411abba7ad9b7bb75019f08755dbfa163d2fc7fdd80676bf9350c4c56a19c in /entrypoint.sh 
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 ENTRYPOINT ["/entrypoint.sh"]
-# Wed, 13 Jan 2021 09:59:26 GMT
+# Fri, 15 Jan 2021 22:20:28 GMT
 CMD ["catalina.sh" "run"]
 ```
 
@@ -1948,27 +2396,27 @@ CMD ["catalina.sh" "run"]
 		Last Modified: Wed, 13 Jan 2021 08:45:07 GMT  
 		Size: 130.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:27d0338c86c97b0be09af8b424c33300871b9350f7a04aab0446a5d9c2bc734c`  
-		Last Modified: Wed, 13 Jan 2021 10:02:01 GMT  
-		Size: 276.3 MB (276297055 bytes)  
+	-	`sha256:b2034621e33c8767d5992060fe71c589c67c1d3ff5739078202c944552a600a7`  
+		Last Modified: Fri, 15 Jan 2021 22:21:36 GMT  
+		Size: 276.3 MB (276302234 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:9fc1f0330e85a22315d5e456818fe98cc085459adc3d878ede26234f6011e84a`  
-		Last Modified: Wed, 13 Jan 2021 10:01:43 GMT  
+	-	`sha256:59edf279a1070f6199d48e96e6a36d5675037c37bc2661aa7792b9b0a14a4ddf`  
+		Last Modified: Fri, 15 Jan 2021 22:21:16 GMT  
 		Size: 249.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:7aa4b51f0171a45880f78eb8d174408408c8e551840bb12df2f3580d72b9a618`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 11.8 MB (11808483 bytes)  
+	-	`sha256:e02f1fb40261824d9d2ee0603c0001dc9c1c779234b1f9eff6c3ce3b530bfcb5`  
+		Last Modified: Fri, 15 Jan 2021 22:22:00 GMT  
+		Size: 11.8 MB (11808595 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:8f16e3dd151f5aff75150d0da50299707c7d0b1f13c7c15d0227168f36f155d7`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.3 KB (1263 bytes)  
+	-	`sha256:c82a273037c9aeb044347bca15be1e8ce9898b0378ac40d909f4984bdfa13094`  
+		Last Modified: Fri, 15 Jan 2021 22:21:57 GMT  
+		Size: 1.3 KB (1267 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:a3575470b78ffc29f19765b62b5322f8700a59256a34b2e720013d787dc0073e`  
-		Last Modified: Wed, 13 Jan 2021 10:02:15 GMT  
-		Size: 1.1 KB (1120 bytes)  
+	-	`sha256:1af67a579afcafb60949efa3895cd124e4f44217d990e6a6eff9e8bfa8027e94`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 1.1 KB (1126 bytes)  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
-	-	`sha256:bd25a2df10ca2c12ae1d5635bf61316e68f886c788d94896eddd4baba9779c8f`  
-		Last Modified: Wed, 13 Jan 2021 10:02:18 GMT  
-		Size: 973.0 B  
+	-	`sha256:5a6f1465ed957a65df5a4a100b22994a79e69fc2f45d102b8598bdfc54a456c4`  
+		Last Modified: Fri, 15 Jan 2021 22:21:58 GMT  
+		Size: 971.0 B  
 		MIME: application/vnd.docker.image.rootfs.diff.tar.gzip
